# ikarus-assesment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-entrypoint.sh  railway.json  supervisord.conf
backend/: .env.example  .flake8  README.md  alembic.ini  config.py  debug_routes.py  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/api/: openapi.yaml
backend/app/: __init__.py  extensions.py  logging_config.py  security.py
backend/app/auth/: __init__.py  handlers.py  models.py  service.py
backend/app/controllers/: __init__.py  auth.py  health.py  weather.py  zones.py
backend/app/integrations/: __init__.py  openweathermap.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 001_initial_tables.py
backend/app/weather/: __init__.py  models.py  service.py
backend/app/zones/: __init__.py  models.py  service.py
backend/docs/: API_EXAMPLES.md  API_VERSIONING.md  ERROR_CODES.md  SECURITY.md
backend/domains/: __init__.py
backend/domains/auth/: __init__.py  models.py
backend/domains/weather/: __init__.py  models.py
backend/domains/zones/: __init__.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_domain_tables.py
backend/scripts/: ensure_mssql_db.py
backend/tests/: conftest.py  test_health.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: .env.example  .prettierignore  README.md  nginx.conf  nginx.standalone.conf  package-lock.json  package.json  tsconfig.app.json
(+51 files in other folders)
