[project]
name = "weatherapp-backend"
version = "0.1.0"
description = "Weather App API"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # default
  \.git
  | \.venv
  | __pycache__
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "migrations", "__pycache__"]
